fix: photos overlapping add form

--- a/client/src/components/MyKitchen/styles.css
+++ b/client/src/components/MyKitchen/styles.css
@@ -101,10 +101,10 @@
 
 @media only screen and (min-width: 550px) {
   .spices {
-    top: 5px;
+    top: 0px;
     left:40px;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
   }
 }
 
@@ -112,8 +112,8 @@
   .spices {
     top: 0px;
     left:140px;
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
   }
 
 }
